Suporte ao TLS 1.2.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,11 @@ Thumbs.db
 
 #dotCover
 *.dotCover
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/Cielo/v15/Server/sqlite3/storage.ide-wal
+/.vs/Cielo/v15/Server/sqlite3/storage.ide-shm
+/.vs/Cielo/v15/Server/sqlite3/storage.ide
+/.vs/Cielo/v15/Server/sqlite3/db.lock
+/.vs/Cielo/v15/Server/sqlite3
